--- a/style.css
+++ b/style.css
@@ -27,8 +27,10 @@ section {
 }
 
 .logo {
-  width: 5%;
-  height: auto;
+  width: 120px;
+  height: 80px;
+  object-fit: contain; 
+  background-color: white; 
 }
 
 .logo-footer {
